Switch from jsDelivr to unpkg for Three.js

--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
     </style>
   </head>
   <body>
-    <script src="https://cdn.jsdelivr.net/npm/three@0.161.0/build/three.min.js"></script>
+    <!-- ✅ use unpkg instead of jsDelivr -->
+    <script src="https://unpkg.com/three@0.161.0/build/three.min.js"></script>
     <script src="main.js"></script>
   </body>
 </html>
