--- a/index.html
+++ b/index.html
@@ -13,7 +13,14 @@
     </style>
   </head>
   <body>
-    <script src="https://cdn.jsdelivr.net/npm/three@0.161.0/build/three.min.js"></script>
-    <script src="main.js"></script>
+    <script type="importmap">
+    {
+      "imports": {
+        "three": "https://unpkg.com/three@0.160.0/build/three.module.js"
+      }
+    }
+    </script>
+
+    <script type="module" src="main.js"></script>
   </body>
 </html>
