--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Escape!</title>
+  <title>Maze game</title>
   <style>
     body { margin: 0; overflow: hidden; }
     canvas { display: block; }
