--- a/index.html
+++ b/index.html
@@ -1,26 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Maze Game</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Maze game</title>
   <style>
-    body { margin: 0; overflow: hidden; background: black; }
+    body { margin: 0; overflow: hidden; }
     canvas { display: block; }
   </style>
 </head>
 <body>
-  <script type="module">
-    import * as THREE from 'https://unpkg.com/three@0.160.0/build/three.module.js';
-    import { BufferGeometryUtils } from 'https://unpkg.com/three@0.160.0/examples/jsm/utils/BufferGeometryUtils.module.js';
-
-    import('./main.js').then(module => {
-      if (typeof module.default === 'function') {
-        module.default(THREE, BufferGeometryUtils);
-      } else if (typeof module.init === 'function') {
-        module.init(THREE, BufferGeometryUtils);
-      }
-    });
-  </script>
+  <script src="https://cdn.jsdelivr.net/npm/three@0.157.0/build/three.min.js"></script>
+  <script src="main.js"></script>
 </body>
 </html>
